new folder functionality

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"homepage": "http://emilifraim.github.io/tree-folder",
 	"dependencies": {
 		"axios": "^0.18.0",
+		"classnames": "^2.2.6",
 		"gh-pages": "^2.0.1",
 		"react": "^16.7.0",
 		"react-dom": "^16.7.0",
@@ -21,5 +22,10 @@
 	"eslintConfig": {
 		"extends": "react-app"
 	},
-	"browserslist": [ ">0.2%", "not dead", "not ie <= 11", "not op_mini all" ]
+	"browserslist": [
+		">0.2%",
+		"not dead",
+		"not ie <= 11",
+		"not op_mini all"
+	]
 }
